crates/parser/tests/parse/block-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..421
  MODULE@0..420
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_FUNC@10..75
      L_PAREN@10..11 "("
      KEYWORD@11..15 "func"
      WHITESPACE@15..16 " "
      PLAIN_INSTR@16..29
        L_PAREN@16..17 "("
        INSTR_NAME@17..26 "i32.const"
        WHITESPACE@26..27 " "
        IMMEDIATE@27..28
          INT@27..28 "0"
        R_PAREN@28..29 ")"
      WHITESPACE@29..30 " "
      BLOCK_BLOCK@30..74
        L_PAREN@30..31 "("
        KEYWORD@31..36 "block"
        WHITESPACE@36..37 " "
        BLOCK_TYPE@37..61
          TYPE_USE@37..61
            L_PAREN@37..38 "("
            KEYWORD@38..42 "type"
            WHITESPACE@42..43 " "
            INDEX@43..47
              IDENT@43..47 "$sig"
            R_PAREN@47..48 ")"
            WHITESPACE@48..49 " "
            RESULT@49..61
              L_PAREN@49..50 "("
              KEYWORD@50..56 "result"
              WHITESPACE@56..57 " "
              VAL_TYPE@57..60
                NUM_TYPE@57..60 "i32"
              R_PAREN@60..61 ")"
        WHITESPACE@61..62 " "
        PLAIN_INSTR@62..73
          L_PAREN@62..63 "("
          INSTR_NAME@63..68 "param"
          WHITESPACE@68..69 " "
          ERROR@69..72 "i32"
          R_PAREN@72..73 ")"
        R_PAREN@73..74 ")"
      R_PAREN@74..75 ")"
    WHITESPACE@75..78 "\n  "
    MODULE_FIELD_FUNC@78..143
      L_PAREN@78..79 "("
      KEYWORD@79..83 "func"
      WHITESPACE@83..84 " "
      PLAIN_INSTR@84..97
        L_PAREN@84..85 "("
        INSTR_NAME@85..94 "i32.const"
        WHITESPACE@94..95 " "
        IMMEDIATE@95..96
          INT@95..96 "0"
        R_PAREN@96..97 ")"
      WHITESPACE@97..98 " "
      BLOCK_BLOCK@98..142
        L_PAREN@98..99 "("
        KEYWORD@99..104 "block"
        WHITESPACE@104..105 " "
        BLOCK_TYPE@105..116
          TYPE_USE@105..116
            PARAM@105..116
              L_PAREN@105..106 "("
              KEYWORD@106..111 "param"
              WHITESPACE@111..112 " "
              VAL_TYPE@112..115
                NUM_TYPE@112..115 "i32"
              R_PAREN@115..116 ")"
        WHITESPACE@116..117 " "
        PLAIN_INSTR@117..128
          L_PAREN@117..118 "("
          INSTR_NAME@118..122 "type"
          WHITESPACE@122..123 " "
          IMMEDIATE@123..127
            IDENT@123..127 "$sig"
          R_PAREN@127..128 ")"
        WHITESPACE@128..129 " "
        PLAIN_INSTR@129..141
          L_PAREN@129..130 "("
          INSTR_NAME@130..136 "result"
          WHITESPACE@136..137 " "
          ERROR@137..140 "i32"
          R_PAREN@140..141 ")"
        R_PAREN@141..142 ")"
      R_PAREN@142..143 ")"
    WHITESPACE@143..146 "\n  "
    MODULE_FIELD_FUNC@146..211
      L_PAREN@146..147 "("
      KEYWORD@147..151 "func"
      WHITESPACE@151..152 " "
      PLAIN_INSTR@152..165
        L_PAREN@152..153 "("
        INSTR_NAME@153..162 "i32.const"
        WHITESPACE@162..163 " "
        IMMEDIATE@163..164
          INT@163..164 "0"
        R_PAREN@164..165 ")"
      WHITESPACE@165..166 " "
      BLOCK_BLOCK@166..210
        L_PAREN@166..167 "("
        KEYWORD@167..172 "block"
        WHITESPACE@172..173 " "
        BLOCK_TYPE@173..197
          TYPE_USE@173..197
            PARAM@173..184
              L_PAREN@173..174 "("
              KEYWORD@174..179 "param"
              WHITESPACE@179..180 " "
              VAL_TYPE@180..183
                NUM_TYPE@180..183 "i32"
              R_PAREN@183..184 ")"
            WHITESPACE@184..185 " "
            RESULT@185..197
              L_PAREN@185..186 "("
              KEYWORD@186..192 "result"
              WHITESPACE@192..193 " "
              VAL_TYPE@193..196
                NUM_TYPE@193..196 "i32"
              R_PAREN@196..197 ")"
        WHITESPACE@197..198 " "
        PLAIN_INSTR@198..209
          L_PAREN@198..199 "("
          INSTR_NAME@199..203 "type"
          WHITESPACE@203..204 " "
          IMMEDIATE@204..208
            IDENT@204..208 "$sig"
          R_PAREN@208..209 ")"
        R_PAREN@209..210 ")"
      R_PAREN@210..211 ")"
    WHITESPACE@211..214 "\n  "
    MODULE_FIELD_FUNC@214..279
      L_PAREN@214..215 "("
      KEYWORD@215..219 "func"
      WHITESPACE@219..220 " "
      PLAIN_INSTR@220..233
        L_PAREN@220..221 "("
        INSTR_NAME@221..230 "i32.const"
        WHITESPACE@230..231 " "
        IMMEDIATE@231..232
          INT@231..232 "0"
        R_PAREN@232..233 ")"
      WHITESPACE@233..234 " "
      BLOCK_BLOCK@234..278
        L_PAREN@234..235 "("
        KEYWORD@235..240 "block"
        WHITESPACE@240..241 " "
        BLOCK_TYPE@241..253
          TYPE_USE@241..253
            RESULT@241..253
              L_PAREN@241..242 "("
              KEYWORD@242..248 "result"
              WHITESPACE@248..249 " "
              VAL_TYPE@249..252
                NUM_TYPE@249..252 "i32"
              R_PAREN@252..253 ")"
        WHITESPACE@253..254 " "
        PLAIN_INSTR@254..265
          L_PAREN@254..255 "("
          INSTR_NAME@255..259 "type"
          WHITESPACE@259..260 " "
          IMMEDIATE@260..264
            IDENT@260..264 "$sig"
          R_PAREN@264..265 ")"
        WHITESPACE@265..266 " "
        PLAIN_INSTR@266..277
          L_PAREN@266..267 "("
          INSTR_NAME@267..272 "param"
          WHITESPACE@272..273 " "
          ERROR@273..276 "i32"
          R_PAREN@276..277 ")"
        R_PAREN@277..278 ")"
      R_PAREN@278..279 ")"
    WHITESPACE@279..282 "\n  "
    MODULE_FIELD_FUNC@282..347
      L_PAREN@282..283 "("
      KEYWORD@283..287 "func"
      WHITESPACE@287..288 " "
      PLAIN_INSTR@288..301
        L_PAREN@288..289 "("
        INSTR_NAME@289..298 "i32.const"
        WHITESPACE@298..299 " "
        IMMEDIATE@299..300
          INT@299..300 "0"
        R_PAREN@300..301 ")"
      WHITESPACE@301..302 " "
      BLOCK_BLOCK@302..346
        L_PAREN@302..303 "("
        KEYWORD@303..308 "block"
        WHITESPACE@308..309 " "
        BLOCK_TYPE@309..321
          TYPE_USE@309..321
            RESULT@309..321
              L_PAREN@309..310 "("
              KEYWORD@310..316 "result"
              WHITESPACE@316..317 " "
              VAL_TYPE@317..320
                NUM_TYPE@317..320 "i32"
              R_PAREN@320..321 ")"
        WHITESPACE@321..322 " "
        PLAIN_INSTR@322..333
          L_PAREN@322..323 "("
          INSTR_NAME@323..328 "param"
          WHITESPACE@328..329 " "
          ERROR@329..332 "i32"
          R_PAREN@332..333 ")"
        WHITESPACE@333..334 " "
        PLAIN_INSTR@334..345
          L_PAREN@334..335 "("
          INSTR_NAME@335..339 "type"
          WHITESPACE@339..340 " "
          IMMEDIATE@340..344
            IDENT@340..344 "$sig"
          R_PAREN@344..345 ")"
        R_PAREN@345..346 ")"
      R_PAREN@346..347 ")"
    WHITESPACE@347..350 "\n  "
    MODULE_FIELD_FUNC@350..403
      L_PAREN@350..351 "("
      KEYWORD@351..355 "func"
      WHITESPACE@355..356 " "
      PLAIN_INSTR@356..369
        L_PAREN@356..357 "("
        INSTR_NAME@357..366 "i32.const"
        WHITESPACE@366..367 " "
        IMMEDIATE@367..368
          INT@367..368 "0"
        R_PAREN@368..369 ")"
      WHITESPACE@369..370 " "
      BLOCK_BLOCK@370..402
        L_PAREN@370..371 "("
        KEYWORD@371..376 "block"
        WHITESPACE@376..377 " "
        BLOCK_TYPE@377..389
          TYPE_USE@377..389
            RESULT@377..389
              L_PAREN@377..378 "("
              KEYWORD@378..384 "result"
              WHITESPACE@384..385 " "
              VAL_TYPE@385..388
                NUM_TYPE@385..388 "i32"
              R_PAREN@388..389 ")"
        WHITESPACE@389..390 " "
        PLAIN_INSTR@390..401
          L_PAREN@390..391 "("
          INSTR_NAME@391..396 "param"
          WHITESPACE@396..397 " "
          ERROR@397..400 "i32"
          R_PAREN@400..401 ")"
        R_PAREN@401..402 ")"
      R_PAREN@402..403 ")"
    WHITESPACE@403..406 "\n  "
    MODULE_FIELD_FUNC@406..418
      L_PAREN@406..407 "("
      KEYWORD@407..411 "func"
      WHITESPACE@411..412 " "
      BLOCK_BLOCK@412..417
        KEYWORD@412..417 "block"
      R_PAREN@417..418 ")"
    WHITESPACE@418..419 "\n"
    R_PAREN@419..420 ")"
  WHITESPACE@420..421 "\n"

error: expected instruction
  ┌─ block-malformed.wat:2:62
  │
2 │   (func (i32.const 0) (block (type $sig) (result i32) (param i32)))
  │                                                              ^^^

error: expected instruction
  ┌─ block-malformed.wat:3:62
  │
3 │   (func (i32.const 0) (block (param i32) (type $sig) (result i32)))
  │                                                              ^^^

error: expected instruction
  ┌─ block-malformed.wat:5:62
  │
5 │   (func (i32.const 0) (block (result i32) (type $sig) (param i32)))
  │                                                              ^^^

error: expected instruction
  ┌─ block-malformed.wat:6:50
  │
6 │   (func (i32.const 0) (block (result i32) (param i32) (type $sig)))
  │                                                  ^^^

error: expected instruction
  ┌─ block-malformed.wat:7:50
  │
7 │   (func (i32.const 0) (block (result i32) (param i32)))
  │                                                  ^^^

error: expected `end`
  ┌─ block-malformed.wat:8:14
  │
8 │   (func block)
  │              ^
